--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3.3'
 services:
+  browser:
+    ports:
+      - '4444:4444'
+      - '7900:7900'
+    image: 'selenium/standalone-firefox:4.8.1-20230306'
   scraper:
     build: ./scraper
     command: python main.py
