--- a/scraper/pyproject.toml
+++ b/scraper/pyproject.toml
@@ -2,11 +2,12 @@
 name = "scraper"
 version = "0.1.0"
 description = ""
+authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.9"
-bs4 = "^0.0.1"
+beautifulsoup4 = "^4.11.2"
 selenium = "^4.8.2"
 lxml = "^4.9.2"
 
