--- a/scraper/requirements.txt
+++ b/scraper/requirements.txt
@@ -1,3 +1,20 @@
-beautifulsoup4==4.9.3
-selenium==3.141.0
-lxml
+async-generator==1.10 ; python_version >= "3.9" and python_version < "3.10"
+attrs==22.2.0 ; python_version >= "3.9" and python_version < "3.10"
+beautifulsoup4==4.11.2 ; python_version >= "3.9" and python_version < "3.10"
+certifi==2022.12.7 ; python_version >= "3.9" and python_version < "3.10"
+cffi==1.15.1 ; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.9" and python_version < "3.10"
+exceptiongroup==1.1.1 ; python_version >= "3.9" and python_version < "3.10"
+h11==0.14.0 ; python_version >= "3.9" and python_version < "3.10"
+idna==3.4 ; python_version >= "3.9" and python_version < "3.10"
+lxml==4.9.2 ; python_version >= "3.9" and python_version < "3.10"
+outcome==1.2.0 ; python_version >= "3.9" and python_version < "3.10"
+pycparser==2.21 ; python_version >= "3.9" and os_name == "nt" and implementation_name != "pypy" and python_version < "3.10"
+pysocks==1.7.1 ; python_version >= "3.9" and python_version < "3.10"
+selenium==4.8.2 ; python_version >= "3.9" and python_version < "3.10"
+sniffio==1.3.0 ; python_version >= "3.9" and python_version < "3.10"
+sortedcontainers==2.4.0 ; python_version >= "3.9" and python_version < "3.10"
+soupsieve==2.4 ; python_version >= "3.9" and python_version < "3.10"
+trio-websocket==0.10.0 ; python_version >= "3.9" and python_version < "3.10"
+trio==0.22.0 ; python_version >= "3.9" and python_version < "3.10"
+urllib3[socks]==1.26.15 ; python_version >= "3.9" and python_version < "3.10"
+wsproto==1.2.0 ; python_version >= "3.9" and python_version < "3.10"
