--- a/orm/pyproject.toml
+++ b/orm/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "scraper"
+name = "orm"
 version = "0.1.0"
 description = ""
 authors = ["Aaron <aaron@aaron.com>"]
@@ -7,11 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.9"
-beautifulsoup4 = "^4.11.2"
-selenium = "^4.8.2"
-lxml = "^4.9.2"
 sqlalchemy = "^1.4"
 psycopg2-binary = "^2.9.5"
+alembic = "^1.10.2"
+sqlalchemy-utils = "^0.40.0"
 
 
 [build-system]
