--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,30 +24,35 @@ services:
     depends_on:
       database:
         condition: service_healthy
-#  webdriver:
-#    restart: unless-stopped
-#    ports:
-#      - '4444:4444'
-#      # uncomment for live browser view
-#      # - '7900:7900'
-#    healthcheck:
-#      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:4444"]
-#      interval: 2s
-#      timeout: 60s
-#    image: 'selenium/standalone-firefox:4.8.1-20230306'
-#    depends_on:
-#      orm:
-#        condition: service_completed_successfully
-#  scraper:
-#    restart: unless-stopped
-#    build: ./scraper
-#    command: python main.py
-#    volumes:
-#      - ./scraper:/usr/src/app
-#    env_file:
-#      - .env
-#    depends_on:
-#      webdriver:
-#        condition: service_healthy
-#
-#
+  webdriver:
+    restart: unless-stopped
+    ports:
+      - '4444:4444'
+      # uncomment for live browser view
+      # - '7900:7900'
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "curl",
+          "--silent",
+          "--fail",
+          "http://localhost:4444"
+        ]
+      interval: 2s
+      timeout: 60s
+    image: 'selenium/standalone-firefox:4.8.1-20230306'
+    depends_on:
+      orm:
+        condition: service_completed_successfully
+  scraper:
+    restart: unless-stopped
+    build: ./scraper
+    command: python main.py
+    volumes:
+      - ./scraper:/usr/src/app
+    env_file:
+      - .env
+    depends_on:
+      webdriver:
+        condition: service_healthy
