--- a/scraper/pyproject.toml
+++ b/scraper/pyproject.toml
@@ -14,6 +14,9 @@ sqlalchemy = "^1.4"
 psycopg2-binary = "^2.9.5"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
