--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,17 @@ services:
     depends_on:
       database:
         condition: service_healthy
+  # api:
+  #   restart: unless-stopped
+  #   build: ./api
+  #   command: python manage.py runserver
+  #   volumes:
+  #     - ./scraper:/usr/src/app
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     orm:
+  #       condition: service_completed_successfully
   webdriver:
     restart: unless-stopped
     ports:
