--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ORM_SERVICE=orm
 WEBDRIVER_SERVICE=webdriver
 #
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=1nbmdcRwvTfZv0AF
+POSTGRES_PASSWORD=1111
 POSTGRES_PORT=5432
 #
 DATABASE_ADMIN=articles_admin
