--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,11 +1,14 @@
 click==8.1.3 ; python_version >= "3.9" and python_version < "3.10"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.10" and platform_system == "Windows"
 flask==2.2.3 ; python_version >= "3.9" and python_version < "3.10"
+greenlet==2.0.2 ; python_version >= "3.9" and platform_machine == "aarch64" and python_version < "3.10" or python_version >= "3.9" and platform_machine == "ppc64le" and python_version < "3.10" or python_version >= "3.9" and platform_machine == "x86_64" and python_version < "3.10" or python_version >= "3.9" and platform_machine == "amd64" and python_version < "3.10" or python_version >= "3.9" and platform_machine == "AMD64" and python_version < "3.10" or python_version >= "3.9" and platform_machine == "win32" and python_version < "3.10" or python_version >= "3.9" and platform_machine == "WIN32" and python_version < "3.10"
 gunicorn==20.1.0 ; python_version >= "3.9" and python_version < "3.10"
 importlib-metadata==6.1.0 ; python_version >= "3.9" and python_version < "3.10"
 itsdangerous==2.1.2 ; python_version >= "3.9" and python_version < "3.10"
 jinja2==3.1.2 ; python_version >= "3.9" and python_version < "3.10"
 markupsafe==2.1.2 ; python_version >= "3.9" and python_version < "3.10"
+psycopg2-binary==2.9.5 ; python_version >= "3.9" and python_version < "3.10"
 setuptools==67.6.1 ; python_version >= "3.9" and python_version < "3.10"
+sqlalchemy==1.4.47 ; python_version >= "3.9" and python_version < "3.10"
 werkzeug==2.2.3 ; python_version >= "3.9" and python_version < "3.10"
 zipp==3.15.0 ; python_version >= "3.9" and python_version < "3.10"
