--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,16 +56,16 @@ services:
     depends_on:
       webdriver:
         condition: service_healthy
-  webapp:
-    restart: unless-stopped
-    build: ./web
-    command: gunicorn -w 1 -b 0.0.0.0 'main:create_app()'
-    ports:
-      - 8000:8000
-    volumes:
-      - ./web:/usr/src/app
-    env_file:
-      - .env
-    depends_on:
-      orm:
-        condition: service_completed_successfully
+  # web:
+  #   restart: unless-stopped
+  #   build: ./web
+  #   command: gunicorn -w 1 -b 0.0.0.0 'main:create_app()'
+  #   ports:
+  #     - 8000:8000
+  #   volumes:
+  #     - ./web:/usr/src/app
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     orm:
+  #       condition: service_completed_successfully
