--- a/scraper/pyproject.toml
+++ b/scraper/pyproject.toml
@@ -12,6 +12,7 @@ selenium = "^4.8.2"
 lxml = "^4.9.2"
 sqlalchemy = "^1.4"
 psycopg2-binary = "^2.9.5"
+schedule = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
