--- a/service-web/Dockerfile
+++ b/service-web/Dockerfile
@@ -3,7 +3,6 @@ FROM python:3.9-bullseye
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-WORKDIR /usr/src/app
 
 # Install poetry separated from system interpreter
 ENV POETRY_VERSION=1.4.0
@@ -16,12 +15,16 @@ RUN python3 -m venv $POETRY_VENV \
 ENV PATH="${PATH}:${POETRY_VENV}/bin"
 ENV POETRY_CACHE_DIR=/opt/.cache
 
-# Copy reqs first. If no change to reqs this stage is cached
-COPY poetry.lock pyproject.toml ./
+RUN mkdir -p /usr/src/package-orm
+WORKDIR /usr/src/package-orm
+COPY package-orm /usr/src/package-orm
+
+WORKDIR /usr/src/app
+COPY service-web/poetry.lock service-web/pyproject.toml ./
 RUN poetry check
 RUN poetry config virtualenvs.create false
 RUN poetry install --no-interaction --no-cache --without dev
 
-COPY . .
+COPY service-web /usr/src/app
 
 CMD ["poetry", "run", "gunicorn", "-w", "1", "-b", "0.0.0.0", "main:create_app()"]
