--- a/package-orm/pyproject.toml
+++ b/package-orm/pyproject.toml
@@ -1,18 +1,17 @@
 [tool.poetry]
-name = "scraper"
+name = "thesetimes-orm"
 version = "0.1.0"
 description = ""
-authors = ["Aaron <aaron@aaron.com>"]
+authors = ["alvgrv <aaron.lovegrove@essentia-analytics.com>"]
 readme = "README.md"
+packages = [{include = "thesetimes_orm"}]
 
 [tool.poetry.dependencies]
 python = "~3.9"
-beautifulsoup4 = "^4.11.2"
-selenium = "^4.8.2"
-lxml = "^4.9.2"
 sqlalchemy = "^1.4"
 psycopg2-binary = "^2.9.5"
-schedule = "^1.2.0"
+alembic = "^1.10.2"
+sqlalchemy-utils = "^0.40.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
@@ -34,3 +33,4 @@ disable = [
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
