--- a/service-scraper/pyproject.toml
+++ b/service-scraper/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "orm"
+name = "thesetimes-service-scraper"
 version = "0.1.0"
 description = ""
 authors = ["Aaron <aaron@aaron.com>"]
@@ -7,10 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.9"
+beautifulsoup4 = "^4.11.2"
+selenium = "^4.8.2"
+lxml = "^4.9.2"
 sqlalchemy = "^1.4"
 psycopg2-binary = "^2.9.5"
-alembic = "^1.10.2"
-sqlalchemy-utils = "^0.40.0"
+schedule = "^1.2.0"
+thesetimes-orm = { path = "../package-orm", develop = false}
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
