--- a/service-web/pyproject.toml
+++ b/service-web/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "web"
+name = "thesetimes-service-web"
 version = "0.1.0"
 description = ""
 authors = ["Aaron <aaron@aaron.com>"]
@@ -11,7 +11,7 @@ flask = "^2.2.3"
 gunicorn = "^20.1.0"
 sqlalchemy = "^1.4"
 psycopg2-binary = "^2.9.5"
-
+thesetimes-orm = { path = "../package-orm", develop = false}
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.1"
