fix: scrape interval env var

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ SCRAPER_SERVICE=scraper
 ORM_SERVICE=orm
 WEBDRIVER_SERVICE=webdriver
 #
+SCRAPE_INTERVAL_HR=1
+#
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=1111
 POSTGRES_PORT=5432
