--- a/.env
+++ b/.env
@@ -7,11 +7,10 @@ WEBDRIVER_SERVICE=webdriver
 SCRAPE_INTERVAL_HR=1
 #
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=1111
+POSTGRES_PASSWORD=9d55f069828a
 POSTGRES_PORT=5432
 #
 DATABASE_ADMIN=articles_admin
 DATABASE_USER=articles_user
 DATABASE_NAME=thesetimes
-#
-TZ=Europe/London
+
