--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,9 @@
 
 service-database/
 log.txt
-
+service-orm/alembic/versions
 
 .DS_STORE
-
-
-
-
-
-
-
-
-
-
-
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
