--- a/service-web/Makefile
+++ b/service-web/Makefile
@@ -1,8 +1,8 @@
 lint:
-	-poetry run docformatter -r --in-place --black main.py core tests || [ $$? -eq 3 ] # accept error code 3 as success
-	poetry run black main.py core tests
-	poetry run isort main.py core tests
-	poetry run flake8 main.py core tests
+	-poetry run docformatter -r --in-place --black main.py core || [ $$? -eq 3 ] # accept error code 3 as success
+	poetry run black main.py core
+	poetry run isort main.py core
+	poetry run flake8 main.py core
 	poetry run pylint main.py core
 
 test:
